--- a/index.html
+++ b/index.html
@@ -89,23 +89,23 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Desenvolvedor Web</h3>
+            <div class="subheading mb-3">Fysight</div>
+            <p>Atuação como desenvolvedor front-end para a empresa Fysight, uma empresa que visa melhorar a vida das pessoas utilizando inteligência artificial. Um dos projetos de atuação está disponível no <a href="https://www.bluemirror.ai/">link</a> e constitui em um donning buddy, no qual uma pessoa capacitada pode assistir aos profissionais da saúde fazerem a parametrização de EPI's e utiliza botões de feedback para guiar o profissional da saúde, remotamente. A principal tecnologia utilizada nesse projeto foi React.js.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Julho 2020 - Presente</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Pesquisador Científico</h3>
             <div class="subheading mb-3">Laboratory of Embedded and Distributed Systems - LEDS</div>
             <p>Trabalho em parceria com a Gerência de Pesquisa da UNIVALI, e apoio do CNPq. Foram desenvolvidos artigos científicos com foco no projeto de aceleradores de hardware para algoritmos de processamento de imagem em FPGA. Um dos projetos desenvolvidos tinha como objetivo a exploração arquitetural de um filtro de difusão anisotrópica para imagens médicas. Os resultados desse trabalho foram submetidos para publicações em periódicos internacionais.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Junho 2018 - Dezembro 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Monitor do Laboratório de Eletrônica</h3>
-            <div class="subheading mb-3">Universidade do Vale do Itajaí - UNIVALI</div>
-            <p>Atuação como monitor das disciplinas de eletrônica básica e eletrônica aplicada. Entre as responsabilidades da função estavam: auxílio aos alunos dos cursos de engenharia de computação e engenharia elétrica, bem como a supervisão dos equipamentos eletrônicos do laboratório.</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Fevereiro 2018 - Dezembro 2018</span>
           </div>
         </div>
 
@@ -200,7 +200,13 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
+            Next Level Week #1 - 20h</li>
+          <li>
+            <i class="fa-li fa fa-award text-warning"></i>
             Semana OmniStack 11.0 - 10h</li>
+          <li>
+            <i class="fa-li fa fa-award text-warning"></i>
+            Semana FullStack Master - 8h</li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
             Workshop Dev Especial - 7h</li>
